la vaina de react 2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "homepage": "https://sw-o-rd.github.io/React-test",
   "name": "practicas-react",
-  "homepage": "https://github.com/sw-o-rd/React-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
